Fix spacing in images

--- a/css/main.css
+++ b/css/main.css
@@ -486,8 +486,8 @@ footer {
 
     .project-journal {
         height: 610px;
-        width: 800px;
-        margin-bottom: 20px;
+        width: 890px;
+        margin: 0 auto 20px;
     }
 
     .project {
@@ -497,9 +497,9 @@ footer {
 
     .portfolio-images-journal {
         float: left;
-        width: 40%;
+        width: 319px;
         height: 502px;
-        margin: 0 20px 0 0;
+        margin: 0 40px 0 0;
         overflow-y: hidden;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
